--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,8 +1,9 @@
-compressionLevel: mixed
-
 enableGlobalCache: true
 
 packageExtensions:
+  "@blueprintjs/table@*":
+    peerDependencies:
+      "@blueprintjs/icons": "*"
   "@next/react-dev-overlay@*":
     peerDependencies:
       react: "*"
@@ -11,10 +12,11 @@ packageExtensions:
       supports-color: "*"
   vite@*:
     dependencies:
+      ms: "*"
       supports-color: "*"
 
 pnpFallbackMode: all
 
 pnpMode: loose
 
-yarnPath: .yarn/releases/yarn-4.11.0.cjs
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
