--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "clean": "rm -rf dist/*",
     "dev": "vike dev",
-    "build": "vite build",
-    "server": "tsx ./server/index.ts",
-    "server:dev": "nodemon --watch server --watch .pnp.cjs --exec tsx --env-file=.env ./server/index.ts",
+    "build": "vike build",
+    "preview": "vike build && vike preview",
     "format": "prettier --write .",
-    "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
-    "start": "yarn run build && yarn run server",
+    "dev:v1": "vike dev",
+    "start:v1": "yarn run build && yarn run server",
     "test:runtime": "tsx tests/test-urls.ts"
   },
   "workspaces": [
@@ -31,20 +30,30 @@
     "@babel/preset-typescript": "^7.18.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
     "@mdx-js/rollup": "^2.3.0",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^5.0.6",
+    "@types/geojson": "^7946.0.10",
+    "@types/node": "^20.4.10",
+    "@types/prop-types": "^15",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-redux": "^7.1.7",
     "@types/underscore": "^1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "@yarnpkg/sdks": "^3.1.0",
-    "chalk": "^5.3.0",
-    "http-proxy-middleware": "^3.0.3",
-    "nodemon": "^3.1.11",
     "prettier": "^2.7.1",
     "sass-embedded": "^1.79.1",
     "stylus": "^0.55.0",
-    "typescript": "^5.9.3"
+    "supports-color": "^10.2.2",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.6",
     "@blueprintjs/core": "^5.10.2",
+    "@blueprintjs/icons": "^6.5.0",
     "@blueprintjs/popover2": "^2.1.32",
     "@blueprintjs/select": "^5.1.4",
     "@blueprintjs/table": "^5.1.4",
@@ -55,7 +64,6 @@
     "@macrostrat-web/globe": "workspace:*",
     "@macrostrat-web/lithology-hierarchy": "workspace:*",
     "@macrostrat-web/map-utils": "workspace:*",
-    "@macrostrat-web/qgis-integration": "workspace:*",
     "@macrostrat-web/section-editor-demo": "workspace:*",
     "@macrostrat-web/security": "workspace:*",
     "@macrostrat-web/settings": "workspace:*",
@@ -85,17 +93,10 @@
     "@turf/boolean-contains": "^7.2.0",
     "@turf/centroid": "^7.0.0",
     "@turf/distance": "^7.0.0",
-    "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.17",
-    "@types/geojson": "^7946.0.10",
-    "@types/node": "^20.4.10",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.7",
-    "@universal-middleware/express": "^0.0.2",
     "@visx/axis": "^2.14.0",
+    "@visx/group": "^3.12.0",
     "@visx/scale": "^2.2.2",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@visx/shape": "^3.12.0",
     "allotment": "^1.20.2",
     "axios": "^1.13.2",
     "cesium": "^1.135.0",
@@ -111,11 +112,8 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "esbuild": "^0.20.0",
-    "esbuild-register": "^3.5.0",
+    "encoding": "^0.1.13",
     "esprima": "^4.0.1",
-    "express": "^4.21.2",
-    "express-http-proxy": "^2.0.0",
     "fuse.js": "^7.0.0",
     "geologic-patterns": "2.0.0-dev1",
     "hex-to-css-filter": "^5.4.0",
@@ -127,9 +125,10 @@
     "mapbox-gl": "^3.13.0",
     "new-github-issue-url": "^1.0.0",
     "part-regex": "^0.1.2",
-    "react": "^18.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^19.2.3",
     "react-cookie": "^3.0.4",
-    "react-dom": "^18.3.0",
+    "react-dom": "^19.2.3",
     "react-intersection-observer": "^9.4.3",
     "react-redux": "^7.2.0",
     "react-router": "^6.8.2",
@@ -139,8 +138,8 @@
     "recharts": "^2.13.0",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
-    "sirv": "^2.0.3",
-    "swagger-ui-react": "^5.12.3",
+    "supercluster": "^8.0.1",
+    "swagger-ui-react": "^5.31.0",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "tsx": "^4.20.6",
@@ -151,8 +150,6 @@
     "use-resize-observer": "^9.1.0",
     "vike": "^0.4.252",
     "vike-react": "^0.6.18",
-    "vike-server": "^1.0.25",
-    "vite": "^7.3.1",
     "vite-css-modules": "^1.11.1",
     "vite-plugin-cesium": "^1.2.23",
     "vite-plugin-cjs-interop": "^2.3.0",
@@ -161,7 +158,7 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.11.0",
+  "packageManager": "yarn@4.12.0",
   "resolutions": {
     "@macrostrat/api-types": "portal:../web-components/packages/api-types",
     "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
