--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -14,6 +14,12 @@ packageExtensions:
     dependencies:
       ms: "*"
       supports-color: "*"
+  swagger-ui-react@*:
+    dependencies:
+      to-buffer: "*"
+  "@swaggerexpert/json-pointer@*":
+    dependencies:
+      "@swagger-api/apidom-core": "*"
 
 pnpFallbackMode: all
 
