--- a/package.json
+++ b/package.json
@@ -158,27 +158,5 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.12.0",
-  "resolutions": {
-    "@macrostrat/api-types": "portal:../web-components/packages/api-types",
-    "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
-    "@macrostrat/column-components": "portal:../web-components/packages/column-components",
-    "@macrostrat/column-views": "portal:../web-components/packages/column-views",
-    "@macrostrat/data-components": "portal:../web-components/packages/data-components",
-    "@macrostrat/data-sheet": "portal:../web-components/packages/data-sheet",
-    "@macrostrat/feedback-components": "portal:../web-components/packages/feedback-components",
-    "@macrostrat/form-components": "portal:../web-components/packages/form-components",
-    "@macrostrat/map-interface": "portal:../web-components/packages/map-interface",
-    "@macrostrat/map-styles": "portal:../web-components/packages/map-styles",
-    "@macrostrat/mapbox-react": "portal:../web-components/packages/mapbox-react",
-    "@macrostrat/mapbox-utils": "portal:../web-components/packages/mapbox-utils",
-    "@macrostrat/static-map-utils": "portal:../web-components/packages/static-map-utils",
-    "@macrostrat/stratigraphy-utils": "portal:../web-components/packages/stratigraphy-utils",
-    "@macrostrat/style-system": "portal:../web-components/packages/style-system",
-    "@macrostrat/svg-map-components": "portal:../web-components/packages/svg-map-components",
-    "@macrostrat/timescale": "portal:../web-components/packages/timescale",
-    "@macrostrat/ui-components": "portal:../web-components/packages/ui-components",
-    "@macrostrat/hyperstyle-loader": "portal:../web-components/toolchain/hyperstyle-loader",
-    "@macrostrat/vite-plugin-hyperstyles": "portal:../web-components/toolchain/vite-plugin-hyperstyles"
-  }
+  "packageManager": "yarn@4.12.0"
 }
