Tried to update basic elements

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "vike dev",
     "build": "vike build",
     "preview": "vike build && vike preview",
+    "start": "vike build && node ./dist/server/index.mjs",
     "format": "prettier --write .",
     "dev:v1": "vike dev",
     "start:v1": "yarn run build && yarn run server",
@@ -87,12 +88,14 @@
     "@macrostrat/svg-map-components": "^1.0.7",
     "@macrostrat/timescale": "^2.3.2",
     "@macrostrat/ui-components": "^4.5.3",
+    "@photonjs/express": "^0.1.13",
     "@react-hook/size": "^2.1.2",
     "@supabase/postgrest-js": "^1.18.1",
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^7.2.0",
     "@turf/centroid": "^7.0.0",
     "@turf/distance": "^7.0.0",
+    "@universal-middleware/core": "^0.4.16",
     "@visx/axis": "^2.14.0",
     "@visx/group": "^3.12.0",
     "@visx/scale": "^2.2.2",
@@ -114,6 +117,7 @@
     "d3-shape": "^3.2.0",
     "encoding": "^0.1.13",
     "esprima": "^4.0.1",
+    "express": "^5.2.1",
     "fuse.js": "^7.0.0",
     "geologic-patterns": "2.0.0-dev1",
     "hex-to-css-filter": "^5.4.0",
@@ -149,7 +153,8 @@
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
     "vike": "^0.4.252",
-    "vike-react": "^0.6.18",
+    "vike-photon": "^0.1.24",
+    "vike-react": "^0.6.19",
     "vite-css-modules": "^1.11.1",
     "vite-plugin-cesium": "^1.2.23",
     "vite-plugin-cjs-interop": "^2.3.0",
