--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@babel/runtime": "^7.28.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
     "@mdx-js/rollup": "^2.3.0",
     "@types/compression": "^1.7.2",
@@ -92,6 +93,7 @@
     "@turf/boolean-contains": "^7.2.0",
     "@turf/centroid": "^7.0.0",
     "@turf/distance": "^7.0.0",
+    "@uiw/react-color": "2.9.2",
     "@universal-middleware/core": "^0.4.16",
     "@visx/axis": "^2.14.0",
     "@visx/group": "^3.12.0",
@@ -149,7 +151,7 @@
     "use-element-dimensions": "^2.1.3",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
-    "vike": "^0.4.252",
+    "vike": "0.4.252-commit-3ea247f",
     "vike-photon": "^0.1.24",
     "vike-react": "^0.6.19",
     "vite-css-modules": "^1.11.1",
