Updated lith hierarchy

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,5 @@
 enableGlobalCache: false
+#nodeLinker: node-modules
 
 packageExtensions:
   "@blueprintjs/table@*":
@@ -22,7 +23,6 @@ packageExtensions:
       "@swagger-api/apidom-core": "*"
 
 pnpFallbackMode: all
-
 pnpMode: loose
 
 yarnPath: .yarn/releases/yarn-4.12.0.cjs
