--- a/package.json
+++ b/package.json
@@ -70,22 +70,22 @@
     "@macrostrat-web/text-toolchain": "workspace:*",
     "@macrostrat-web/utility-functions": "workspace:*",
     "@macrostrat/api-types": "^1.1.5",
-    "@macrostrat/color-utils": "^1.2.0",
-    "@macrostrat/column-components": "^2.0.3",
-    "@macrostrat/column-views": "^3.0.2",
-    "@macrostrat/data-components": "^1.0.0",
-    "@macrostrat/data-sheet": "^3.0.1",
-    "@macrostrat/feedback-components": "^2.0.0",
-    "@macrostrat/form-components": "^1.0.2",
+    "@macrostrat/color-utils": "^1.2.1",
+    "@macrostrat/column-components": "^2.0.4",
+    "@macrostrat/column-views": "^3.0.3",
+    "@macrostrat/data-components": "^1.0.1",
+    "@macrostrat/data-sheet": "^3.0.2",
+    "@macrostrat/feedback-components": "^2.0.1",
+    "@macrostrat/form-components": "^1.0.3",
     "@macrostrat/hyper": "^3.0.6",
-    "@macrostrat/map-interface": "^2.0.0",
-    "@macrostrat/map-styles": "^2.0.0",
-    "@macrostrat/mapbox-react": "^3.0.0",
-    "@macrostrat/mapbox-utils": "^1.7.0",
+    "@macrostrat/map-interface": "^2.0.1",
+    "@macrostrat/map-styles": "^2.0.1",
+    "@macrostrat/mapbox-react": "^3.0.1",
+    "@macrostrat/mapbox-utils": "^1.7.1",
     "@macrostrat/style-system": "^0.3.0",
-    "@macrostrat/svg-map-components": "^2.0.0",
-    "@macrostrat/timescale": "^3.0.0",
-    "@macrostrat/ui-components": "^5.0.3",
+    "@macrostrat/svg-map-components": "^2.0.1",
+    "@macrostrat/timescale": "^3.0.1",
+    "@macrostrat/ui-components": "^5.0.4",
     "@photonjs/express": "^0.1.13",
     "@react-hook/size": "^2.1.2",
     "@supabase/postgrest-js": "^1.18.1",
@@ -162,27 +162,5 @@
   "prettier": {
     "proseWrap": "always"
   },
-  "packageManager": "yarn@4.12.0",
-  "resolutions": {
-    "@macrostrat/api-types": "portal:../web-components/packages/api-types",
-    "@macrostrat/color-utils": "portal:../web-components/packages/color-utils",
-    "@macrostrat/column-components": "portal:../web-components/packages/column-components",
-    "@macrostrat/column-views": "portal:../web-components/packages/column-views",
-    "@macrostrat/data-components": "portal:../web-components/packages/data-components",
-    "@macrostrat/data-sheet": "portal:../web-components/packages/data-sheet",
-    "@macrostrat/map-interface": "portal:../web-components/packages/map-interface",
-    "@macrostrat/map-styles": "portal:../web-components/packages/map-styles",
-    "@macrostrat/mapbox-react": "portal:../web-components/packages/mapbox-react",
-    "@macrostrat/mapbox-utils": "portal:../web-components/packages/mapbox-utils",
-    "@macrostrat/static-map-utils": "portal:../web-components/packages/static-map-utils",
-    "@macrostrat/stratigraphy-utils": "portal:../web-components/packages/stratigraphy-utils",
-    "@macrostrat/svg-map-components": "portal:../web-components/packages/svg-map-components",
-    "@macrostrat/timescale": "portal:../web-components/packages/timescale",
-    "@macrostrat/ui-components": "portal:../web-components/packages/ui-components",
-    "@macrostrat/feedback-components": "portal:../web-components/packages/feedback-components",
-    "@macrostrat/form-components": "portal:../web-components/packages/form-components",
-    "@macrostrat/style-system": "portal:../web-components/packages/style-system",
-    "@macrostrat/hyperstyle-loader": "portal:../web-components/toolchain/hyperstyle-loader",
-    "@macrostrat/vite-plugin-hyperstyles": "portal:../web-components/toolchain/vite-plugin-hyperstyles"
-  }
+  "packageManager": "yarn@4.12.0"
 }
