--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.28.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
+    "@macrostrat/vite-plugin-hyperstyles": "^2.0.0",
     "@mdx-js/rollup": "^2.3.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^5.0.6",
