--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client", "vike-react"],
+    "types": [
+      "@macrostrat/vite-plugin-hyperstyles/client",
+      "vite/client",
+      "vike-react"
+    ],
     "noEmit": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,10 +25,10 @@
   },
   "exclude": ["dist"],
   "include": [
+    "vite.config.ts",
     "packages/*/src/**/*",
     "src/**/*",
     "pages/**/*",
-    "server/**/*",
-    "vite.config.ts"
+    "server/**/*"
   ]
 }
